<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.dipoletech.basesimulator.MainActivityFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin_my"
    tools:showIn="@layout/content_main"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_128"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_64"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_32"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_16"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_8"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_4"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_2"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_1"
            android:layout_weight="1"
            android:src="@drawable/green_light_bulb"
            android:contentDescription="@string/image_desc" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_gravity="bottom"
        android:padding="5dp"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/black_overlay"
        card_view:cardCornerRadius="5dp"
        android:elevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_128"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_128"
                android:textSize="10sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_64"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/button_64"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_32"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_32" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_16"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_16" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_8"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_8" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_4"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_2"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/button_1" />

        </LinearLayout>

        <android.support.v7.widget.GridLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="60dp"
            android:layout_weight="2"
            app:orientation="horizontal"
            app:columnCount="3">

            <android.support.v7.widget.Space
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_rowWeight="0.1"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/game_mode_status_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="3"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:padding="10dp"
                android:background="@color/black_overlay_1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:typeface="sans"
                android:gravity="center"
                android:text="@string/game_mode"
                android:textSize="14sp" />

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"
                app:layout_gravity="fill_horizontal"
                android:src="@drawable/red_minus"
                android:contentDescription="@string/Image"
                android:id="@+id/minus_button" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"
                app:layout_gravity="fill_horizontal"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/initial_zero"
                android:typeface="sans"
                android:textSize="30sp"
                android:id="@+id/counter_text" />

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_rowWeight="2"
                app:layout_gravity="fill_horizontal"
                android:src="@drawable/green_plus"
                android:contentDescription="@string/image"
                android:id="@+id/plus_button" />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                android:text="@string/all_off"
                app:layout_gravity="fill_horizontal"
                android:contentDescription="@string/Image"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:id="@+id/all_off_button" />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                android:text="@string/game_mode"
                app:layout_gravity="fill_horizontal"
                android:contentDescription="@string/Image"
                android:typeface="sans"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/game_mode_button" />

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:text="@string/all_on"
                android:contentDescription="@string/Image"
                android:typeface="sans"
                android:textStyle="bold"
                android:textSize="16sp"
                android:id="@+id/all_on_button" />

        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>

